# Literature-search_AgenticAI

./: .env.example  .gitattributes  .gitignore  EVALUATION_REPORT_README.md  GITHUB_UPLOAD.md  LICENSE  PROJECT_DESCRIPTION.txt  README.md  collect_result.sh  collect_results.py  config.detailed.json  config.example.json  config.quick.json  evaluation.txt  faithfulness_eval.py  generate_clef_configs.py  generate_manuscript.py  pyproject.toml  requirements.txt  run_guide.sh  run_review.py  screening_metrics.py
presentation/: clef_evaluation_full_report.pptx  clef_evaluation_run2_only.pptx  local_literature_review_agent_overview.pptx
runs/20260614-194223-eco-hab-mouse-social-behavior-automated-home-cage-monitoring/: ranked_candidates.json  review_config.json  run_stats.json
runs/20260614-194223-eco-hab-mouse-social-behavior-automated-home-cage-monitoring/candidates/: doi-10-1002-1098-2337-1977-3-3-271-aid-ab2480030308-3-0-co-2-q.json  doi-10-1002-ab-21431.json  doi-10-1002-jnr-24777.json  doi-10-1007-s00213-024-06528-6.json  doi-10-1016-0031-9384-78-90329-3.json  doi-10-1016-0031-9384-79-90209-9.json  (+71 more)
runs/20260616-192955-cd000996-inhaled-corticosteroids-for-bronchiectasis/: ranked_candidates.json  review_config.json  run_stats.json
scripts/: check_setup.py  setup_windows.ps1
scripts/evaluation/: README.md  backfill_extraction_provenance.py  evaluate_clef_tar.py  evaluate_faithfulness.py  generate_clef_configs.py
src/lit_review_agent/: cli.py  config.py  local_ollama.py  manuscript.py  pipeline.py  ranking.py  schemas.py  sources.py  storage.py
(+308 files in other folders)
