[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-review-agent"
version = "0.1.0"
description = "Free local agentic literature search, extraction, and systematic review manuscript drafting with Ollama and PubMedBERT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "numpy>=1.24.0",
  "torch>=2.2.0",
  "transformers>=4.41.0"
]

[project.scripts]
lit-review-agent = "lit_review_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
